# slalomstream

./: .gitattributes  .gitignore  .prettierignore  .replit  AZURE_SETUP.md  RELEASES.md  deploy-azure.ps1  deploy-azure.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  start.ps1  start.sh  version.json
.agents/: agent_assets_metadata.toml
.github/workflows/: ci.yml  tauri-build.yml
artifacts/api-server/: build.ts  package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  index.ts
artifacts/slalom-stream/: index.html  package.json  requirements.yaml  vite.config.ts
attached_assets/: Pasted--SlalomStream-Tournament-Management-Syst-1773790030047_1773790030051.txt  Pasted--SlalomStream-Tournament-Management-Syst-1773790812006_1773790812007.txt  Pasted--SlalomStream-Tournament-Management-Syst-1773793982572_1773793982572.txt  Pasted--SlalomStream-Tournament-Management-Syst-1773794481657_1773794481659.txt
docs/: deployment-secrets.md
installer/: .gitignore  SlalomStream-Launch.bat  SlalomStream.bat  build-installer.sh  installer.nsi  preconfig.nsh
installer/stage/: SlalomStream-Launch.bat  SlalomStream.bat  version.json
lib/api-spec/: openapi.yaml
lib/db/: package.json
scripts/: build-sea.mjs  bump-version.mjs  download-cloudflared.mjs  download-ffmpeg.mjs  seed-test-tournament.ts  start-local.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+57 files in other folders)
