[package]
name = "slalom-stream"
version = "2.0.0"
description = "SlalomStream desktop app"
authors = ["NZTWSA"]
edition = "2021"

[lib]
name = "slalom_stream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slalom-stream"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
sysinfo = { version = "0.30", default-features = false, features = ["disk"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
